tests/input/semantic_errors/pointerOperationError.c
int main(){
        int c = 5;
        int* a = &c;
        int* b = &c;
        a + b;
        return 1;
}


